--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a backend service for media scrapper",
   "main": "src/server",
   "scripts": {
-    "dev": "node src/server",
+    "dev": "nodemon src/server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,12 +19,13 @@
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.20.0",
-    "cherio": "^1.0.0-rc.2",
+    "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "express-pino-logger": "^7.0.0",
     "mongoose": "^6.2.10",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
     "request": "^2.88.2",
     "request-promise": "^4.2.6"
