--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "Pushp Singh",
   "license": "MIT",
   "dependencies": {
+    "@sentry/node": "^6.19.6",
+    "@sentry/tracing": "^6.19.6",
     "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
