--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "This is a backend service for media scrapper",
   "main": "src/server",
   "scripts": {
-    "dev": "nodemon src/server",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "run-s start-db server",
+    "server": "nodemon src/server",
+    "start-db": "brew services start mongodb-community@4.4",
+    "stop-db": "brew services stop mongodb-community@4.4",
+    "mongo": "mongo"
   },
   "keywords": [
     "[web",
