--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 hostname=localhost
 PORT=5000
 DSN="https://9ffac92c2725455c88063a28a98e046a@o1197076.ingest.sentry.io/6319898"
+username=momos
+password=scrapper
