--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@sentry/node": "^6.19.6",
     "@sentry/tracing": "^6.19.6",
+    "basic-auth": "^2.0.1",
     "body-parser": "^1.20.0",
     "cheerio": "^1.0.0-rc.10",
     "cookie-parser": "^1.4.6",
